--- a/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -2159,7 +2159,7 @@
                             
                                                                     <tr style=";line-height: 22px;">
                                                                 <td style="font-size: 13px; border-right: 1px solid rgb(217,217,217);  padding: 5px 0 5px 5px;">
-                                                                                                                                                                        Windows XP / Firefox / 1024x768                                                                                                                        </td>
+                                                                                                                                                                        Windows / Firefox / 1024x768                                                                                                                        </td>
                                             <td style="font-size: 13px; border-left: 1px solid rgb(217,217,217);  padding: 5px 0 5px 5px;">
                                                                                                 1
                                                                                     </td>
@@ -2182,7 +2182,7 @@
                             
                                                                     <tr style="background-color: rgb(242,242,242);line-height: 22px;">
                                                                 <td style="font-size: 13px; border-right: 1px solid rgb(217,217,217);  padding: 5px 0 5px 5px;">
-                                                                                                                                                                        Windows XP / Opera / 800x300                                                                                                                        </td>
+                                                                                                                                                                        Windows / Opera / 800x300                                                                                                                        </td>
                                             <td style="font-size: 13px; border-left: 1px solid rgb(217,217,217);  padding: 5px 0 5px 5px;">
                                                                                                 1
                                                                                     </td>
